feat: complete homework
